fix mobile spacing and sizing

--- a/app/globals.css
+++ b/app/globals.css
@@ -80,7 +80,7 @@
 
 @layer utilities {
   .heading {
-    @apply font-bold text-4xl md:text-5xl font-oswald;
+    @apply font-bold text-3xl md:text-5xl font-oswald;
   }
 
   .black-gradient {
